syntax = "proto3";

option java_package = "org.orosoft.periodicstop";
option java_multiple_files = true;

message StopPeriodicRequest{
  string userId = 1;
  string device = 2;
}

message StopPeriodicResponse{}

service StopPeriodicCheckService{
  rpc stopPeriodicCheck(StopPeriodicRequest) returns (StopPeriodicResponse);
}